Useless scrollbar problem was almost solved

--- a/Taskodrome/files/taskodrome.css
+++ b/Taskodrome/files/taskodrome.css
@@ -1,8 +1,3 @@
-#content {
-  padding: 0;
-  padding-top: 1em;
-}
-
 .grid {
   background-color: #EEEEEE;
   border: 1px solid #428AC8;
@@ -13,6 +8,7 @@
 }
 
 .tabs {
+  padding-top: 1em;
   position: relative;
   width: 100%;
 }
